--- a/src/index.html
+++ b/src/index.html
@@ -20,26 +20,26 @@
         <img class="header__oggetto-logo" src="img/oggetto_logo.svg">
     </a>
 
-    <div class="header__phone">+7 (812) 2-12-85-06</div>
+    <div class="header__phone">+7 (812) 2&bull;12&bull;85&bull;06</div>
 </header>
 
 <div class="nav-strip">
     <div class="container-fluid">
         <div class="nav-button"></div>
         <ul class="menu">
-            <li class="menu_item">
-                <a class="menu__link" href="#">LISP</a>
+            <li class="menu__item">
+                <a class="menu__link menu__link_selected" href="#">LISP</a>
             </li>
-            <li class="menu_item">
+            <li class="menu__item">
                 <a class="menu__link" href="#">OCalm</a>
             </li>
-            <li class="menu_item">
+            <li class="menu__item">
                 <a class="menu__link" href="#">JavaScript</a>
             </li>
-            <li class="menu_item">
+            <li class="menu__item">
                 <a class="menu__link" href="#">Python</a>
             </li>
-            <li class="menu_item">
+            <li class="menu__item">
                 <a class="menu__link" href="#">PHP</a>
             </li>
         </ul>
@@ -50,14 +50,14 @@
     </div>
 </div>
 
-<div class="container">
+<div class="container-fluid">
     <div class="product clearfix">
         <div class="breadcrumbs">
-            <a class="breadcrumbs__section" href="#">LISP</a>
+            <a class="breadcrumbs__link" href="#">LISP</a>
             /
-            <a class="breadcrumbs__category" href="#">Одежда</a>
+            <a class="breadcrumbs__link" href="#">Одежда</a>
             /
-            <a class="breadcrumbs__subcategory" href="#">Футболки</a>
+            <a class="breadcrumbs__link breadcrumbs__link_last" href="#">Футболки</a>
         </div>
         <div class="product__info right-on-desktop">
             <h1 class="product__name">Футболка Alien technology</h1>
@@ -65,7 +65,7 @@
                 Состав: 100% хлопок, динамическая типизация, польская нотация. Производство: Россия.
             </div>
             <div class="product__price">
-                1500
+                1500 &#8381;
             </div>
         </div>
 
@@ -93,8 +93,7 @@
             <div class="product__actions ">
                 <button class="product__buy">Купить</button>
                 <div class="product__save">
-                    <img class="product__heart" src="img/icons/heart.svg">
-                    Отложить на потом
+                    <img class="product__heart" src="img/icons/heart-grey.svg">Отложить на потом
                 </div>
             </div>
         </div>
@@ -107,48 +106,48 @@
         <div class="footer__links">
             <div class="footer__service">
                 <ul class="footer__group footer__group_centered-mobile padding-for-title">
-                    <li class="footer__item footer__title"><a href="#">Сервис и поддержка</a></li>
-                    <li class="footer__item"><a href="#">Как сделать заказ</a></li>
-                    <li class="footer__item"><a href="#">Возврат товара</a></li>
-                    <li class="footer__item"><a href="#">Публичная оферта</a></li>
-                    <li class="footer__item"><a href="#">Доставка</a></li>
-                    <li class="footer__item"><a href="#">Спобобы оплаты</a></li>
-                    <li class="footer__item"><a href="#">Правила продажи</a></li>
-                    <li class="footer__item"><a href="#">Возврат денежных средств</a></li>
-                    <li class="footer__item"><a href="#">Вопросы и ответы</a></li>
+                    <li class="footer__item footer__title">Сервис и поддержка</li>
+                    <li class="footer__item"><a class="footer__link" href="#">Как сделать заказ</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Возврат товара</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Публичная оферта</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Доставка</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Спобобы оплаты</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Правила продажи</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Возврат денежных средств</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Вопросы и ответы</a></li>
                 </ul>
             </div>
 
             <div class="footer__info">
                 <ul class="footer__group footer__group_centered-mobile padding-for-title">
-                    <li class="footer__item footer__title"><a href="#">О компании</a></li>
-                    <li class="footer__item"><a href="#">О нас</a></li>
-                    <li class="footer__item"><a href="#">Контакты</a></li>
-                    <li class="footer__item"><a href="#">Вакансии</a></li>
-                    <li class="footer__item"><a href="#">Партнерам</a></li>
-                    <li class="footer__item"><a href="#">Сертификаты</a></li>
-                    <li class="footer__item"><a href="#">Преимущества</a></li>
-                    <li class="footer__item"><a href="#">Наши скидки</a></li>
+                    <li class="footer__item footer__title">О компании</li>
+                    <li class="footer__item"><a class="footer__link" href="#">О нас</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Контакты</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Вакансии</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Партнерам</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Сертификаты</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Преимущества</a></li>
+                    <li class="footer__item"><a class="footer__link" href="#">Наши скидки</a></li>
                 </ul>
             </div>
 
             <div class="footer__benefits">
                 <ul class="footer__group footer__group_centered items-vertical-align">
-                    <li class="footer__item relative mobile-text-centered">
-                        <a href="#">
-                            <img class="footer__img_s" src="img/icons/delivery.svg">
+                    <li class="footer__item mobile-text-centered">
+                        <a class="footer__link" href="#">
+                            <img class="footer__img footer__img_s footer__img_shift_l" src="img/icons/delivery.svg">
                             бесплатная доставка от 4000
                         </a>
                     </li>
-                    <li class="footer__item relative mobile-text-centered">
-                        <a href="#">
-                            <img class="footer__img_s" src="img/icons/heart.svg">
+                    <li class="footer__item mobile-text-centered">
+                        <a class="footer__link" href="#">
+                            <img class="footer__img footer__img_s footer__img_shift_s" src="img/icons/heart.svg">
                             пробники в подарок при каждой покупке
                         </a>
                     </li>
-                    <li class="footer__item relative mobile-text-centered">
-                        <a href="#">
-                            <img class="footer__img_s" src="img/icons/cup.svg">
+                    <li class="footer__item mobile-text-centered">
+                        <a class="footer__link" href="#">
+                            <img class="footer__img footer__img_s footer__img_shift_s" src="img/icons/cup.svg">
                             акции и подарки за покупку
                         </a>
                     </li>
