Toggles for product option and mobile menu

--- a/src/index.html
+++ b/src/index.html
@@ -69,9 +69,9 @@
             </div>
         </div>
 
-        <img class="product__image left-on-desktop product__image_selected" src="img/tshirts/tshirt_white.jpg">
-        <img class="product__image left-on-desktop" src="img/tshirts/tshirt_yellow.jpg">
-        <img class="product__image left-on-desktop" src="img/tshirts/tshirt_green.jpg">
+        <img class="product__image product__image_color_white left-on-desktop product__image_selected" src="img/tshirts/tshirt_white.jpg">
+        <img class="product__image product__image_color_yellow left-on-desktop" src="img/tshirts/tshirt_yellow.jpg">
+        <img class="product__image product__image_color_green left-on-desktop" src="img/tshirts/tshirt_green.jpg">
 
         <div class="product__influence right-on-desktop">
             <div class="product__settings">
