--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <img class="header__shop-logo" src="img/the_shop_logo.svg">
     </a>
 
-    <a href="#" class="header__oggetto-link">
+    <a href="http://oggettoweb.com/" class="header__oggetto-link">
         <img class="header__oggetto-logo" src="img/oggetto_logo.svg">
     </a>
 
